--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </ul>
         </p>
 
-        <h5>I, myself being a lover of the art has read every page, every word, and every letter of each of these books. If you have the imagination and lust for adventure, these book selections are the wild rides you have been waiting.</h5>
+        <h5>I, myself being a lover of the art has read every page, every word, and every letter of each of these books. If you have the imagination and lust for adventure, these book selections are the wild rides you have been waiting for!</h5>
 
         <h6>And As Always... LONG LIVE GATES!!!</h6>
     </div>
