--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="HTML.24.html"><img src="Logo.svg" alt=""></a>
+        <a href="index.html"><img src="Logo.svg" alt=""></a>
         <ul>
             <li>
                 <a href="https://www.ebay.com/itm/195404563223?chn=ps&norover=1&mkevt=1&mkrid=711-213727-13078-0&mkcid=2&itemid=195404563223&targetid=4581183927179143&device=c&mktype=&googleloc=&poi=&campaignid=418233787&mkgroupid=1241348861725295&rlsatarget=pla-4581183927179143&abcId=9300542&merchantid=51291&msclkid=2a491ae6a36d11fc8c017eca04f9d0f6">Arrival Of The Prince</a>
